--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -32,3 +32,17 @@
 
 </qc-doc-exemple>
 
+<qc-doc-exemple caption="Exemples de boutons avec un icone.">
+    <div>
+        <button class="qc-button qc-primary">
+            <qc-icon icon="plus" label="Précédent" style="margin-right: 8px;"></qc-icon>
+            Précédent
+        </button>
+
+        <button class="qc-button qc-primary">
+            Suivant
+            <qc-icon icon="plus" label="Précédent" style="margin-left: 8px;"></qc-icon>
+        </button>
+    </div>
+
+</qc-doc-exemple>
