--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2298,6 +2298,17 @@ qc-search-bar {
   opacity: 1;
 }
 
+.qc-button .qc-icon {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  -webkit-mask-size: 100% 100%;
+          mask-size: 100% 100%;
+  -webkit-mask-repeat: no-repeat;
+          mask-repeat: no-repeat;
+  background-color: currentColor;
+}
+
 .qc-container,
 .qc-container-fluid,
 .qc-container-lg,
