--- a/src/sdg/components/Button/_button.scss
+++ b/src/sdg/components/Button/_button.scss
@@ -135,3 +135,12 @@
     opacity: 1;
   }
 }
+
+.qc-button .qc-icon {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  mask-size: 100% 100%;
+  mask-repeat: no-repeat;
+  background-color: currentColor;
+}
