--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2341,7 +2341,6 @@ input[type=checkbox]:checked.qc-compact::after {
 }
 .qc-switch input[type=checkbox]:checked ~ .qc-switch-slider::before {
   transform: translateX(2.4rem);
-  outline: 0.1rem solid var(--qc-color-blue-piv);
 }
 .qc-switch input[type=checkbox]:focus ~ .qc-switch-slider {
   outline: 0.2rem solid var(--qc-color-blue-light);
@@ -2352,7 +2351,7 @@ input[type=checkbox]:checked.qc-compact::after {
   cursor: not-allowed;
 }
 .qc-switch input[type=checkbox]:disabled ~ .qc-switch-slider::before {
-  outline: transparent;
+  border: none;
 }
 
 .qc-switch-label {
@@ -2385,12 +2384,12 @@ input[type=checkbox]:checked.qc-compact::after {
 .qc-switch-slider::before {
   position: absolute;
   content: "";
-  height: 2.6rem;
-  width: 2.6rem;
-  left: 0.2rem;
-  bottom: 0.2rem;
+  height: 2.8rem;
+  width: 2.8rem;
+  left: 0.1rem;
+  bottom: 0.1rem;
   background-color: var(--qc-color-white);
-  outline: 0.1rem solid #464F5B;
+  border: 0.1rem solid var(--qc-color-grey-dark);
   border-radius: 50%;
   transition: all 0.3s ease-out;
 }
