Line height du texte description et charCount

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2219,11 +2219,11 @@ qc-textfield {
 .qc-textfield-container label {
   margin-bottom: 0.4rem;
 }
-.qc-textfield-container.disabled label {
+.qc-textfield-container.qc-disabled label {
   color: var(--qc-color-grey-regular);
   cursor: not-allowed;
 }
-.qc-textfield-container.disabled .qc-textfield-description {
+.qc-textfield-container.qc-disabled .qc-textfield-description {
   color: var(--qc-color-grey-regular);
 }
 
@@ -2235,6 +2235,8 @@ qc-textfield {
 .qc-textfield-description {
   font-size: var(--qc-font-size-sm);
   color: var(--qc-color-blue-dark);
+  height: 2rem;
+  line-height: 2rem;
 }
 
 .qc-textfield.disabled::before {
@@ -2252,6 +2254,8 @@ qc-textfield {
   margin-top: 0.4rem;
   color: var(--qc-color-blue-dark);
   font-size: var(--qc-font-size-sm);
+  height: 2rem;
+  line-height: 2rem;
 }
 .qc-textfield-charcount.max-reached {
   color: var(--qc-color-red-regular);
