--- a/src/sdg/components/TextField/_textField.scss
+++ b/src/sdg/components/TextField/_textField.scss
@@ -111,3 +111,13 @@ qc-textfield {
   }
 }
 
+.qc-textfield-row {
+  display: flex;
+  gap: rem(32);
+
+  > qc-textfield {
+    display: block;
+    width: auto;
+  }
+}
+
