Note - Ajout d'exemple dans l'index

--- a/src/sdg/components/Note/_note.html
+++ b/src/sdg/components/Note/_note.html
@@ -1,4 +1,4 @@
-<h2 id="notes">Notes (qc-note)</h2>
+<h2 id="note">Notes (qc-note)</h2>
 <h3>Exemples</h3>
 <qc-doc-exemple
                 caption="Exemple de notes de bas de page">
@@ -44,5 +44,8 @@
 <style>
   [id] {
     scroll-margin-top: 100px;
+  }
+  table + qc-note-container {
+    margin-top: 16px;
   }
 </style>
