--- a/src/sdg/components/Button/_button.html
+++ b/src/sdg/components/Button/_button.html
@@ -42,13 +42,22 @@
 
         <qc-button
                 variant="primary"
-                label="Suivant"
-                icon="clipboard"
+                label="Information"
+                icon="information"
                 icon-position="right"
         ></qc-button>
     </div>
 
 </qc-doc-exemple>
+
+<qc-doc-exemple caption="Exemple de bouton avec une image personnalisée en base64.">
+    <qc-button
+            variant="primary"
+            label="Télécharger"
+            icon-src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPScxNicgaGVpZ2h0PScxNic+PHJlY3Qgd2lkdGg9JzE2JyBoZWlnaHQ9JzE2JyBmaWxsPSIjMDA3YmZmIi8+PC9zdmc+"
+    ></qc-button>
+</qc-doc-exemple>
+
 
 <h3>Documentation technique</h3>
 
@@ -94,6 +103,23 @@
             <td>False</td>
             <td>Désactive le bouton et empêche toute interaction.</td>
         </tr>
+        <tr>
+            <td>icon</td>
+            <td>Texte</td>
+            <td>""</td>
+            <td>Nom d’une icône présente dans la librairie du projet.</td>
+        </tr>
+        <tr>
+            <td>icon-position</td>
+            <td>"left" ou "right"</td>
+            <td>"left"</td>
+            <td>Positionne l’icône à gauche ou à droite du texte dans le bouton.</td>
+        </tr>
+        <tr>
+            <td>icon-src</td>
+            <td>Texte (base64)</td>
+            <td>""</td>
+            <td>Permet d’afficher une image personnalisée encodée en base64 à la place d’une icône de la librairie.</td>
         </tbody>
     </table>
 </div>
