--- a/src/sdg/components/DropdownList/_dropdownList.html
+++ b/src/sdg/components/DropdownList/_dropdownList.html
@@ -5,6 +5,23 @@
 
 <qc-doc-exemple caption="Exemple de listes déroulantes en sélection unique sans barre de recherche">
     <qc-dropdown-list
+            id="dropdown-list-restaurants"
+            legend="Type de restaurant"
+            placeholder="Type de restaurant"
+            enable-search
+            search-placeholder="Rechercher un type restaurant"
+            invalid-text="Veuillez choisir un type de restaurant."
+    >
+        <qc-option value="Pizzeria" selected>Pizzeria</qc-option>
+        <qc-option value="Patisserie">Patisserie</qc-option>
+        <qc-option value="Steakhouse">Steakhouse</qc-option>
+        <qc-option value="Bar">Bar</qc-option>
+        <qc-option value="Casse-croûte">Casse-croûte</qc-option>
+        <qc-option value="Boîte à pâtes">Boîte à pâtes</qc-option>
+        <qc-option value="Restaurant à burgers">Restaurant à burgers</qc-option>
+    </qc-dropdown-list>
+
+    <qc-dropdown-list
         id="dropdown-list-single-choice"
         legend="Faites un choix:"
     >
@@ -54,30 +71,12 @@
 
 <qc-doc-exemple caption="Exemple de validation de formulaire avec listes déroulantes">
     <form id="dropdown-list-form">
-        <qc-dropdown-list
-            id="dropdown-list-restaurants"
-            legend="Type de restaurant"
-            placeholder="Type de restaurant"
-            enable-search
-            search-placeholder="Rechercher un type restaurant"
-            required
-            invalid-text="Veuillez choisir un type de restaurant."
-        >
-            <qc-option value="Pizzeria">Pizzeria</qc-option>
-            <qc-option value="Patisserie">Patisserie</qc-option>
-            <qc-option value="Steakhouse">Steakhouse</qc-option>
-            <qc-option value="Bar">Bar</qc-option>
-            <qc-option value="Casse-croûte">Casse-croûte</qc-option>
-            <qc-option value="Boîte à pâtes">Boîte à pâtes</qc-option>
-            <qc-option value="Restaurant à burgers">Restaurant à burgers</qc-option>
-        </qc-dropdown-list>
 
         <qc-dropdown-list
             id="dropdown-list-regions"
             legend="Régions desservies"
             placeholder="Sélectionner une région"
             width="xl"
-            multiple
             enable-search
             search-placeholder="Rechercher les régions"
         >
