--- a/src/sdg/components/DropdownList/_dropdownList.html
+++ b/src/sdg/components/DropdownList/_dropdownList.html
@@ -79,6 +79,7 @@
             width="xl"
             enable-search
             search-placeholder="Rechercher les régions"
+            multiple
         >
             <qc-option value="Capitale-nationale">Capitale-nationale</qc-option>
             <qc-option value="Centre-du-Québec" selected>Centre-du-Québec</qc-option>
