--- a/src/sdg/components/DropdownList/_dropdownList.html
+++ b/src/sdg/components/DropdownList/_dropdownList.html
@@ -139,7 +139,7 @@
             <qc-option value="Saguenay-Lac-Saint-Jean">Saguenay-Lac-Saint-Jean</qc-option>
             <qc-option value="Gaspésie-Îles-de-la-Madeleine">Gaspésie-Îles-de-la-Madeleine</qc-option>
             <qc-option value="Nord-du-Québec">Nord-du-Québec</qc-option>
-            <qc-option value="Bas-Saint-Laurent" disabled>Bas-Saint-Laurent</qc-option>
+            <qc-option value="Bas-Saint-Laurent">Bas-Saint-Laurent</qc-option>
         </qc-dropdown-list>
 
         <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
